force-app/main/default/objects/DeliveryWaypoint__c/DeliveryWaypoint__c.object-meta.xml
<CustomObject>
    <label>Delivery Waypoint</label>
    <nameField>
        <displayFormat>DW-{00000000}</displayFormat>
        <label>Delivery Waypoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>