force-app/main/default/objects/DeliveryWaypoint__c/fields/DeliveryPlan__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPlan__c</fullName>
    <formula>DeliveryRoute__r.DeliveryPlan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Plan</label>
    <type>Text</type>
</CustomField>