force-app/main/default/objects/DeliveryWaypoint__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Delivery Waypoints</relationshipLabel>
    <relationshipName>Delivery_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>