force-app/main/default/objects/DeliveryWaypoint__c/fields/Vehicle_Vin__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Vin__c</fullName>
    <formula>DeliveryRoute__r.Vehicle__r.Vin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Vin</label>
    <type>Text</type>
</CustomField>