force-app/main/default/objects/DeliveryWaypoint__c/fields/VehicleName__c.field-meta.xml
<CustomField>
    <fullName>VehicleName__c</fullName>
    <formula>DeliveryRoute__r.Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>